--- a/index.html
+++ b/index.html
@@ -57,15 +57,7 @@
         <div class="row">
           <div class="col-xs-9">
             <h1>Bio</h1>
-            <p>I'm currently a 3rd-year Computer Science student at St. John's University in Queens, NY.</p>
-            <p><strong>Interests:</strong>
-              
-              <ul>Programming Languages
-                <li>Java</li>
-                <li>Python</li>
-                <li>HTML/CSS/JS</li>
-              </ul>
-            </p>
+            <p>I'm a software engineer based out of NYC. I have experience with server-side programming, but have recently discovered my passion for mobile app development, especially Android development.</p>
           </div>
           <div class="col-xs-3">
             <img src="img/icons/profile.jpg" class="img-responsive" />
