--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="row">
           <div class="col-xs-9">
             <h1>Bio</h1>
-            <p>I'm a software engineer based out of NYC. I have experience with server-side programming, but have recently discovered my passion for mobile app development, especially Android development.</p>
+            <p>I'm a software engineer based out of NYC. I mostly work in Android, but dabble in backend work as well. I love to talk about architecture, testing, and Kotlin.</p>
           </div>
           <div class="col-xs-3">
             <img src="img/icons/profile.jpg" class="img-responsive" />
@@ -72,7 +72,7 @@
           </div>
           <div class="col-xs-9">
             <h1>Resume</h1>
-            <p><a href="https://drive.google.com/file/d/0B8ghkqYAru2NZ0lmUWpxMGZSemc/edit?usp=sharing">Take a look at my credentials.</a></p>
+            <p><a href="https://drive.google.com/file/d/0B8ghkqYAru2NZ0lmUWpxMGZSemc/edit?usp=sharing">Have a look at what I'm working on.</a></p>
           </div>          
         </div>
       </div>
